--- a/scripts/support/nginx.conf
+++ b/scripts/support/nginx.conf
@@ -162,6 +162,12 @@ server {
 }
 
 server {
+  listen 8000;
+  server_name talkpay.club;
+  return 301 $http_x_forwarded_proto://www.talkpay.club$request_uri;
+}
+
+server {
   listen 8000 default_server;
   listen [::]:8000 default_server;
 
