--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -228,6 +228,7 @@ jobs:
             - v11-backend-{{ checksum "rundir/minus3-timestamp" }}
       - clean-caches: { path: "backend/_build" }
       - clean-caches: { path: "dotesy" }
+      - run: "find dotesy; du -h -d 2 dotesy"
       # appsupport is needed for a unit test
       - run: touch backend/static/appsupport.js
       - run:
@@ -241,7 +242,7 @@ jobs:
       - set-ownership:
           path: "/home/dark/.esy"
       - copy-into-container
-      - run: docker run -i --volumes-from vols alpine sh -c "find /home/dark/.esy; du --si --max-depth=2 /home/dark/.esy"
+      - run: docker run -i --volumes-from vols alpine sh -c "find /home/dark/.esy; du -h -d 2 /home/dark/.esy"
       - run: scripts/builder --compile-backend --test
       - run-background-container
       - wait-for-container
@@ -258,6 +259,7 @@ jobs:
             docker cp vols:/home/dark/app/backend/node_modules backend/
             docker cp vols:/home/dark/app/backend/static/. backend/static
             docker cp vols:/home/dark/.esy dotesy
+      - run: find dotesy; du --si --max-depth=2 dotesy"
       - save_cache:
           name: "Save daily backend cache"
           paths:
