Same nginx in dev and prod
For nginx 1.x, odd values of x are in active development ("mainline"),
even values are stable.

We were using 1.15 in prod, which isn't available as a package, so
moving both dev and prod to 1.16.

https://trello.com/c/nZ6aypLD/1818-use-nginx-116-in-prod-since-115-is-not-a-stable-release-and-then-we-can-use-116-in-the-dev-container-too

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,14 +301,10 @@ jobs:
     steps:
       - checkout
       - initialize
-      # https://circleci.com/docs/2.0/building-docker-images/#mounting-folders
-      - run:
-          name: Copy app directory into dev container
-          command: |
-            docker create -v /etc/nginx -v /etc/nginx/conf.d --name nginxvols nginx:1.15.3 /bin/true
-            docker cp scripts/support/base-nginx.conf nginxvols:/etc/nginx/nginx.conf
-            docker cp scripts/support/nginx.conf nginxvols:/etc/nginx/conf.d/nginx.conf
-      - run: scripts/support/test-nginx.sh
+      - copy-into-container
+      - run-background-container
+      - wait-for-container
+      - run: scripts/run-in-docker sudo nginx -t
 
   build-client:
     executor: my-executor
