demonstrate circle fails if nginx.conf is no good

--- a/scripts/support/nginx.conf
+++ b/scripts/support/nginx.conf
@@ -5,7 +5,7 @@ gzip on;
 ## the gke load-balancer will handle it fine, and in fact needs a gzipped
 ## response to gzip.
 ## http://nginx.org/en/docs/http/ngx_http_gzip_module.html#gzip_proxied
-gzip_proxied any;
+roxied any;
 
 ## gzip these mime types. some other types of files are already gzipped
 ## in a content-aware way (e.g. png, jpeg) so it probably doesn't make
