--- a/backend/libtarget.js/dune
+++ b/backend/libtarget.js/dune
@@ -4,6 +4,8 @@
   (implements libtarget)
   (libraries core_kernel js_of_ocaml)
   (flags (-warn-error +A))
+  (preprocess (pps  js_of_ocaml-ppx
+      ))
   (js_of_ocaml
     (flags +nat.js)
     (javascript_files libtarget.js)))
