--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /scripts/support/kubernetes/builtwithdark/bwd-deployment.yaml
 /scripts/support/kubernetes/cronchecker/cron-deployment.yaml
 /scripts/support/kubernetes/queueworker/qw-deployment.yaml
+/scripts/support/kubernetes/queueworker/scheduler-deployment.yaml
 /scripts/support/kubernetes/tunnel/tunnel-deployment.yaml
 /scripts/support/kubernetes/postgres-honeytail-deployment.yaml
 
