--- a/queue-scheduler/Cargo.toml
+++ b/queue-scheduler/Cargo.toml
@@ -5,8 +5,11 @@ authors = ["Dark Inc <ops@darklang.com>"]
 edition = "2018"
 
 [dependencies]
+backtrace = "0.3"
 chrono = "0.4"
 config = "0.9"
 postgres = "0.15"
+rand = "0.7.2"
+rollbar = "0.6.0"
 slog = "2.5.2"
 slog-json = "2.3.0"
