Fix missing honeycomb parser
```
dark@dark-dev:~/app$ kubectl logs honeycomb-agent-v1.1-72xqn
time="2019-10-29T04:03:26Z" level=info msg="Initializing agent" version=1.3.3
Error in watcher configuration:
No parser specified
```

Caused crashloopbackoff after #1519

--- a/scripts/support/kubernetes/builtwithdark/honeycomb.yaml
+++ b/scripts/support/kubernetes/builtwithdark/honeycomb.yaml
@@ -97,6 +97,7 @@ data:
       - labelSelector: "app=cron-checker"
         containerName: cron-ctr
         dataset: kubernetes-bwd-ocaml
+        parser: json
       - labelSelector: "app=qw-worker"
         containerName: qw-ctr
         dataset: kubernetes-bwd-ocaml
