use stakater/Reloader to auto-reload honeycomb daemonset when configmap changes
I recommend manual testing before merge
- deploying honeycomb.yaml
- deploying reloader.yaml
- making a change to the honeycomb configmap, and
- verifying that the last ste triggered a rolling upgrade:
  `kubectl rollout status ds/honeycomb-agent-v1.1`

--- a/scripts/support/kubernetes/builtwithdark/honeycomb.yaml
+++ b/scripts/support/kubernetes/builtwithdark/honeycomb.yaml
@@ -144,6 +144,8 @@ metadata:
     version: v1.1
   name: honeycomb-agent-v1.1
   namespace: default
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   updateStrategy:
     type: RollingUpdate
@@ -155,6 +157,8 @@ spec:
         k8s-app: honeycomb-agent
         kubernetes.io/cluster-service: 'true'
         version: v1.1
+      annotations:
+        reloader.stakater.com/auto: "true"
     spec:
       tolerations:
         - operator: Exists
