--- a/queue-scheduler/Cargo.toml
+++ b/queue-scheduler/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Dark Inc <ops@darklang.com>"]
 edition = "2018"
 
 [dependencies]
+backoff = "0.1.5"
 backtrace = "0.3"
 chrono = "0.4"
 config = "0.9"
