--- a/queue-scheduler/Cargo.toml
+++ b/queue-scheduler/Cargo.toml
@@ -18,8 +18,9 @@ backtrace = "0.3"
 chrono = "0.4"
 config = "0.9"
 failure = "0.1.6"
-postgres = "0.15"
+postgres = { version = "0.15", features = ["with-uuid"] }
 rand = "0.7.2"
 rollbar = "0.6.0"
 slog = "2.5.2"
 slog-json = "2.3.0"
+uuid = { version = "0.5", features = ["v4"] }
