--- a/scripts/support/nginx.conf
+++ b/scripts/support/nginx.conf
@@ -202,6 +202,12 @@ server {
 }
 
 server {
+  listen 8000;
+  server_name simitu.dev;
+  return 301 $http_x_forwarded_proto://www.simitu.dev$request_uri;
+}
+
+server {
   listen 8000 default_server;
   listen [::]:8000 default_server;
 
