Enforce exhaustive record matching in backend

--- a/backend/bin/dune
+++ b/backend/bin/dune
@@ -3,7 +3,7 @@
   (name server)
   (public_name server)
   (modules server)
-  (flags (-warn-error +A))
+  (flags (-warn-error +A -w +9))
   (libraries libbackend)
   (package dark)
 )
@@ -12,7 +12,7 @@
   (name add_admin)
   (public_name add_admin)
   (modules add_admin)
-  (flags (-warn-error +A))
+  (flags (-warn-error +A -w +9))
   (libraries libbackend)
   (package dark)
 )
@@ -21,7 +21,7 @@
   (name segment_identify_users)
   (public_name segment_identify_users)
   (modules segment_identify_users)
-  (flags (-warn-error +A))
+  (flags (-warn-error +A -w +9))
   (libraries libbackend libcommon)
   (package dark)
 )
@@ -30,7 +30,7 @@
   (name get_functions_and_tlids)
   (public_name get_functions_and_tlids)
   (modules get_functions_and_tlids)
-  (flags (-warn-error +A))
+  (flags (-warn-error +A -w +9))
   (libraries libbackend libexecution)
   (package dark)
 )
@@ -39,7 +39,7 @@
   (name queue_worker)
   (public_name queue_worker)
   (modules queue_worker)
-  (flags (-warn-error +A))
+  (flags (-warn-error +A -w +9))
   (libraries libbackend)
   (preprocess (pps lwt_ppx))
   (package dark)
@@ -49,7 +49,7 @@
   (name cron_checker)
   (public_name cron_checker)
   (modules cron_checker)
-  (flags (-warn-error +A))
+  (flags (-warn-error +A -w +9))
   (libraries libbackend)
   (preprocess (pps lwt_ppx))
   (package dark)
@@ -59,7 +59,7 @@
   (name validate_data_loads)
   (public_name validate_data_loads)
   (modules validate_data_loads)
-  (flags (-warn-error +A))
+  (flags (-warn-error +A -w +9))
   (libraries libbackend libexecution libcommon)
   (preprocess (pps lwt_ppx))
   (package dark)
@@ -69,7 +69,7 @@
   (name migration_to_deprecate_old_types)
   (public_name migration_to_deprecate_old_types)
   (modules migration_to_deprecate_old_types)
-  (flags (-warn-error +A))
+  (flags (-warn-error +A -w +9))
   (libraries libbackend libexecution libcommon)
   (preprocess (pps lwt_ppx))
   (package dark)
