--- a/backend/libcommon/dune
+++ b/backend/libcommon/dune
@@ -1,6 +1,6 @@
 (library
   (name libcommon)
-  (flags (-warn-error +A))
+  (flags (-warn-error +A -w +9))
   (libraries core_kernel libtarget yojson lwt)
 )
 
