--- a/backend/libexecution/dune
+++ b/backend/libexecution/dune
@@ -1,6 +1,6 @@
 (library
   (name libexecution)
-  (flags (-warn-error +A))
+  (flags (-warn-error +A -w +9))
   (preprocess (pps  ppx_bin_prot
                     ppx_compare
                     ppx_deriving.std
