Enforce explicit record matching in client This is called warning 9

--- a/client/bsconfig.json
+++ b/client/bsconfig.json
@@ -33,7 +33,7 @@
   ],
   "bs-dev-dependencies": [
   ],
-  "bsc-flags": ["-bs-g", "-bs-super-errors", "-warn-error", "@A", "-w", "-4-9-30-40-41-42-102"],
+  "bsc-flags": ["-bs-g", "-bs-super-errors", "-warn-error", "@A", "-w", "-4-30-40-41-42-102"],
   "warnings": {
     "error": "+101"
   },
